--- a/content/index.fr.html
+++ b/content/index.fr.html
@@ -31,7 +31,7 @@
         <p>LXC est prêt pour la production. La version 1.0 est supportée
            pour 5 ans (jusqu'en avril 2019) avec des mises à jour de sécurité et
            correctifs .</p>
-        <p><a class="btn btn-primary" href="/fr//lxc/introduction" role="button">Plus d'information &raquo;</a></p>
+        <p><a class="btn btn-primary" href="/fr/lxc/introduction" role="button">Plus d'information &raquo;</a></p>
     </div>
 
     <div class="col-md-4">
